--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -1,1 +1,20 @@
-<p>articles works!</p>
+
+<div class="card">
+	<div class="card-body">
+		<h5 class="card-title text-primary">Artículos válidos</h5>
+		<p class="card-text">
+			<span class="badge badge-pill badge-success" *ngFor="let item of okValues">{{item}}</span>
+		</p>
+	</div>
+</div>
+
+<br>
+
+<div class="card">
+	<div class="card-body">
+		<h5 class="card-title text-warning">Artículos inválidos</h5>
+		<p class="card-text">
+			<span class="badge badge-pill badge-dark" *ngFor="let item of wrongValues">{{item}}</span>
+		</p>
+	</div>
+</div>
